# BigBrother-bot

./: .gitignore  Cargo.toml  DATA.md  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: release.yml
extras/: DATA.md
src/: catchup.rs  dispatch.rs  error.rs  main.rs  messages.rs  metadata.rs  network.rs  settings.rs  storage.rs  utils.rs
